--- a/src/main/resources/data/gui/mainmenu.css
+++ b/src/main/resources/data/gui/mainmenu.css
@@ -1,3 +1,11 @@
 body {
 	background: url(../img/background.png);
 	}
+
+.button {
+   	 -fx-background-color: #000000;
+	-fx-text-fill: white;
+	-fx-opacity: 80%;
+	-fx-border-width: 1px;
+	-fx-border-color: white; 
+}
