--- a/src/main/resources/data/gui/mainmenu.css
+++ b/src/main/resources/data/gui/mainmenu.css
@@ -3,9 +3,14 @@ body {
 	}
 
 .button {
-   	 -fx-background-color: #000000;
+   	 -fx-background-color: #101010;
 	-fx-text-fill: white;
 	-fx-opacity: 80%;
 	-fx-border-width: 1px;
 	-fx-border-color: white; 
+}
+
+.button: hover{
+	-fx-background-color: #000000;
+	-fx-opacity: 90%;
 }
