changed background image

--- a/src/main/resources/data/gui/mainmenu.css
+++ b/src/main/resources/data/gui/mainmenu.css
@@ -1,5 +1,7 @@
-body {
-	background: url(../img/background.png);
+.pane {
+	-fx-background-image: url("img/background.png");
+	 -fx-background-size: 100%;
+	 -fx-background-repeat: stretch;
 	}
 
 .button {
