--- a/src/main/resources/data/gui/mainmenu.fxml
+++ b/src/main/resources/data/gui/mainmenu.fxml
@@ -8,13 +8,8 @@
 <?import javafx.scene.layout.*?>
 
 
-<Pane fx:controller="nl.joshuaslik.UFMReckoning.gui.ActionController" id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1600.0" style="-fx-background-image: url(img/background.png); -fx-background-size: 100%; -fx-background-repeat: stretch;" styleClass="pane" stylesheets="@mainmenu.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<Pane fx:controller="nl.joshuaslik.UFMReckoning.gui.ActionController" id="pane" maxHeight="-Infinity" styleClass="pane" stylesheets="@mainmenu.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
 	<children>
-		<ImageView fitHeight="900.0" fitWidth="1600.0">
-			<image>
-				<Image url="@img/background.png" />
-			</image>
-		</ImageView>
 		<Button id="btn_NewGame" layoutX="105.0" layoutY="233.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="250.0" styleClass="btn_NewGame" text="New Game" onAction="#handleNewGame"/>
 		<Button id="btn_LoadGame" layoutX="105.0" layoutY="308.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="250.0" styleClass="btn_LoadGame" text="Load Game" onAction="#handleLoadGame"/>
 		<Button id="btn_Highscore" layoutX="105.0" layoutY="383.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="250.0" styleClass="btn_Highscore" text="Highscore" onAction="#handleHighscores"/>
