--- a/src/main/resources/data/gui/NewGame.fxml
+++ b/src/main/resources/data/gui/NewGame.fxml
@@ -10,6 +10,6 @@
 
 <Pane fx:controller="nl.joshuaslik.UFMReckoning.gui.ActionController" id="pane" maxHeight="-Infinity" styleClass="pane" stylesheets="@mainmenu.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
 	<children>
-		<Button id="btn_NewGame" layoutX="105.0" layoutY="233.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="250.0" styleClass="btn_NewGame" text="New Game" onAction="#handleNewGame"/>
+		<Button id="btn_StartGame" layoutX="90" layoutY="330" mnemonicParsing="false" prefHeight="100" prefWidth="400" styleClass="btn_StartGame" text="Start game" onAction="#handleStartGame"/>
 	</children>
 </Pane>
