--- a/src/main/resources/data/gui/mainmenu.css
+++ b/src/main/resources/data/gui/mainmenu.css
@@ -7,12 +7,16 @@
 }
 
 .button {
-   	-fx-background-color: #101010;
+	-fx-padding: 0;
+	-fx-margin: 0;
+	-fx-background-color: #101010;
 	-fx-text-fill: white;
-	-fx-font: 57.95pt Quicksand;
+	-fx-font-size: 60;
+	-fx-font-family: 'Quicksand Book';
 	-fx-opacity: 80%;
 	-fx-border-width: 1px;
 	-fx-border-color: #cecece;
+	-fx-border-style: solid;
 }
 
 .button: hover{
