--- a/src/main/resources/data/gui/mainmenu.fxml
+++ b/src/main/resources/data/gui/mainmenu.fxml
@@ -10,9 +10,9 @@
 
 <Pane fx:controller="nl.joshuaslik.UFMReckoning.gui.ActionController" id="pane" maxHeight="-Infinity" styleClass="pane" stylesheets="@mainmenu.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
 	<children>
-		<Button id="btn_NewGame" layoutX="105.0" layoutY="233.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="250.0" styleClass="btn_NewGame" text="New Game" onAction="#handleNewGame"/>
-		<Button id="btn_LoadGame" layoutX="105.0" layoutY="307.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="250.0" styleClass="btn_LoadGame" text="Load Game" onAction="#handleLoadGame"/>
-		<Button id="btn_Highscore" layoutX="105.0" layoutY="379.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="250.0" styleClass="btn_Highscore" text="Highscore" onAction="#handleHighscores"/>
-		<Button id="btn_ExitGame" layoutX="105.0" layoutY="453.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="250.0" styleClass="btn_ExitGame" text="Exit Game" onAction="#handleExitGame"/>
+		<Button id="btn_StartGame" layoutX="90" layoutY="330" mnemonicParsing="false" prefHeight="100" prefWidth="400" styleClass="btn_StartGame" text="Start game" onAction="#handleStartGame"/>
+		<Button id="btn_Options" layoutX="90" layoutY="430" mnemonicParsing="false" prefHeight="100" prefWidth="400" styleClass="btn_Options" text="Options" onAction="#handleOptions"/>
+		<Button id="btn_Highscore" layoutX="90" layoutY="530" mnemonicParsing="false" prefHeight="100" prefWidth="400" styleClass="btn_Highscore" text="Highscore" onAction="#handleHighscores"/>
+		<Button id="btn_QuitGame" layoutX="90" layoutY="630" mnemonicParsing="false" prefHeight="100" prefWidth="400" styleClass="btn_QuitGame" text="Quit game" onAction="#handleQuitGame"/>
 	</children>
 </Pane>
