--- a/src/main/resources/data/gui/NewGame.fxml
+++ b/src/main/resources/data/gui/NewGame.fxml
@@ -10,6 +10,8 @@
 
 <Pane fx:controller="nl.joshuaslik.UFMReckoning.gui.ActionController" id="pane" maxHeight="-Infinity" styleClass="pane" stylesheets="@mainmenu.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
 	<children>
-		<Button id="btn_StartGame" layoutX="90" layoutY="330" mnemonicParsing="false" prefHeight="100" prefWidth="400" styleClass="btn_StartGame" text="Start game" onAction="#handleStartGame"/>
+		<Button id="btn_NewGame" layoutX="90" layoutY="330" mnemonicParsing="false" prefHeight="100" prefWidth="400" styleClass="btn_StartGame" text="New Game" onAction="#handleNewGame"/>
+		<Button id="btn_LoadGame" layoutX="90" layoutY="430" mnemonicParsing="false" prefHeight="100" prefWidth="400" styleClass="btn_StartGame" text="Load Game" onAction="#handleLoadGame"/>
+		<Button id="btn_ReturnMainMenu" layoutX="90" layoutY="530" mnemonicParsing="false" prefHeight="100" prefWidth="400" styleClass="btn_StartGame" text="Return" onAction="#handleReturnMainMenu"/>
 	</children>
 </Pane>
