--- a/src/main/resources/data/gui/mainmenu.fxml
+++ b/src/main/resources/data/gui/mainmenu.fxml
@@ -14,5 +14,6 @@
 		<Button id="btn_Options" layoutX="90" layoutY="430" mnemonicParsing="false" prefHeight="100" prefWidth="400" styleClass="btn_Options" text="Options" onAction="#handleOptions"/>
 		<Button id="btn_Highscore" layoutX="90" layoutY="530" mnemonicParsing="false" prefHeight="100" prefWidth="400" styleClass="btn_Highscore" text="Highscore" onAction="#handleHighscores"/>
 		<Button id="btn_QuitGame" layoutX="90" layoutY="630" mnemonicParsing="false" prefHeight="100" prefWidth="400" styleClass="btn_QuitGame" text="Quit game" onAction="#handleQuitGame"/>
+		<Button id="btn_MainGame" layoutX="1000" layoutY="630" mnemonicParsing="false" prefHeight="100" styleClass="btn_MainGame" text="Main game (Debug)" onAction="#handleMainGame"/>
 	</children>
 </Pane>
