deleted on action

--- a/src/main/resources/data/gui/Competition.fxml
+++ b/src/main/resources/data/gui/Competition.fxml
@@ -13,11 +13,11 @@
 		<Button id="btn_NextGames" layoutX="90" layoutY="130" mnemonicParsing="false" prefHeight="100" prefWidth="400" styleClass="btn_NextGames" text="Next Games" onAction="#handleOptions"/>
 		<Button id="btn_PlayedGames" layoutX="900" layoutY="130" mnemonicParsing="false" prefHeight="100" prefWidth="400" styleClass="btn_PlayedGames" text="Games played" onAction="#handleOptions"/>
 		
-		<Button id="btn_ShowNextGame" layoutX="290" layoutY="665" mnemonicParsing="false" prefHeight="25" prefWidth="200" styleClass="btn_ShowNextGame" text="Next game to be played" onAction="#handleOptions"/>
-		<Button id="btn_AllGames" layoutX="490" layoutY="665" mnemonicParsing="false" prefHeight="25" prefWidth="200" styleClass="btn_AllGames" text="See all games" onAction="#handleOptions"/>
-		<Button id="btn_Ranking" layoutX="690" layoutY="665" mnemonicParsing="false" prefHeight="25" prefWidth="200" styleClass="btn_Ranking" text="Ranking" onAction="#handleOptions"/>
-		<Button id="btn_PlayNextRound" layoutX="890" layoutY="665" mnemonicParsing="false" prefHeight="25" prefWidth="200" styleClass="btn_PlayNextRound" text="Play next round" onAction="#handleOptions"/>
-		<Button id="btn_Return" layoutX="1090" layoutY="665" mnemonicParsing="false" prefHeight="25" prefWidth="200" styleClass="btn_Return" text="Return" onAction="#handleOptions"/>
+		<Button id="btn_ShowNextGame" layoutX="290" layoutY="665" mnemonicParsing="false" prefHeight="25" prefWidth="200" styleClass="btn_ShowNextGame" text="Next game to be played" />
+		<Button id="btn_AllGames" layoutX="490" layoutY="665" mnemonicParsing="false" prefHeight="25" prefWidth="200" styleClass="btn_AllGames" text="See all games" />
+		<Button id="btn_Ranking" layoutX="690" layoutY="665" mnemonicParsing="false" prefHeight="25" prefWidth="200" styleClass="btn_Ranking" text="Ranking"/>
+		<Button id="btn_PlayNextRound" layoutX="890" layoutY="665" mnemonicParsing="false" prefHeight="25" prefWidth="200" styleClass="btn_PlayNextRound" text="Play next round"/>
+		<Button id="btn_Return" layoutX="1090" layoutY="665" mnemonicParsing="false" prefHeight="25" prefWidth="200" styleClass="btn_Return" text="Return" />
 	</children>
 </Pane>
 
