--- a/src/main/resources/data/gui/pages-game/Competition.fxml
+++ b/src/main/resources/data/gui/pages-game/Competition.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.*?>
 
 
-<Pane fx:controller="nl.joshuaslik.UFMReckoning.gui.ActionController" id="pane" maxHeight="-Infinity" styleClass="pane" stylesheets="@mainmenu.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<Pane fx:controller="nl.joshuaslik.UFMReckoning.gui.ActionController" id="pane" maxHeight="-Infinity" styleClass="pane" stylesheets="@Competition.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
 	<children>
 		<Pane>
 			<children>
