--- a/src/main/resources/data/gui/pages-game/GameBottomMenuBar.css
+++ b/src/main/resources/data/gui/pages-game/GameBottomMenuBar.css
@@ -1,17 +1,11 @@
-@import url("fonts.css");
+@import url("../fonts.css");
 
-.pane {
-	-fx-background-image: url("img/background.png");
-	-fx-background-size: 100%;
-	-fx-background-repeat: stretch;
-}
-
-.button {
+.bottombarbutton {
 	-fx-padding: 0;
 	-fx-margin: 0;
 	-fx-background-color: #101010;
 	-fx-text-fill: white;
-	-fx-font-size: 60;
+	-fx-font-size: 30;
 	-fx-font-family: 'Quicksand Book';
 	-fx-opacity: 80%;
 	-fx-border-width: 1px;
@@ -19,7 +13,7 @@
 	-fx-border-style: solid;
 }
 
-.button: hover{
+.bottombarbutton: hover{
 	-fx-background-color: #000000;
 	-fx-opacity: 90%;
 	-fx-cursor: hand;
