--- a/src/main/resources/data/gui/pages-game/TeamBuilder.css
+++ b/src/main/resources/data/gui/pages-game/TeamBuilder.css
@@ -1,7 +1,7 @@
-@import url("fonts.css");
+@import url("../fonts.css");
 
 .pane {
-	-fx-background-image: url("img/background.png");
+	-fx-background-image: url("../img/background.png");
 	-fx-background-size: 100%;
 	-fx-background-repeat: stretch;
 }
