--- a/src/main/resources/data/gui/pages-game/Competition.fxml
+++ b/src/main/resources/data/gui/pages-game/Competition.fxml
@@ -12,10 +12,9 @@
 	<children>
 		<Pane>
 			<children>
-				<Button id="btn_PlayedGames" layoutX="900" layoutY="330" mnemonicParsing="false" prefHeight="100" prefWidth="400" styleClass="btn_PlayedGames" text="Games played" onAction="#handleOptions"/>
-				<Button id="btn_NextGames" layoutX="90" layoutY="430" mnemonicParsing="false" prefHeight="100" prefWidth="400" styleClass="btn_NextGames" text="Next Games" onAction="#handleOptions"/>
-				<Button id="btn_Ranking" layoutX="90" layoutY="530" mnemonicParsing="false" prefHeight="100" prefWidth="400" styleClass="btn_Ranking" text="Ranking" onAction="#handleOptions"/>			
-				<Button id="btn_ShowNextGame" layoutX="90" layoutY="630" mnemonicParsing="false" prefHeight="100" prefWidth="400" styleClass="btn_ShowNextGame" text="Next Game" onAction="#handleOptions"/>
+				<Button id="btn_SeeAllGames" layoutX="90" layoutY="430" mnemonicParsing="false" prefHeight="100" prefWidth="400" styleClass="btn_SeeAllGames" text="See all games" onAction="#handleSeeAllGames"/>
+				<Button id="btn_Ranking" layoutX="90" layoutY="530" mnemonicParsing="false" prefHeight="100" prefWidth="400" styleClass="btn_Ranking" text="Ranking" onAction="#handleRanking"/>			
+				<Button id="btn_ShowNextGame" layoutX="90" layoutY="630" mnemonicParsing="false" prefHeight="100" prefWidth="400" styleClass="btn_ShowNextGame" text="Next Game" onAction="#handleShowNextGame"/>
 			</children>
 		</Pane>
 		<!-- Bottom bar -->
