--- a/src/main/resources/data/gui/pages-game/Competition.fxml
+++ b/src/main/resources/data/gui/pages-game/Competition.fxml
@@ -8,17 +8,17 @@
 <?import javafx.scene.layout.*?>
 
 
-<Pane fx:controller="nl.joshuaslik.UFMReckoning.gui.game.CompetitionController" id="pane" maxHeight="-Infinity" styleClass="pane" stylesheets="@Competition.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<Pane fx:controller="nl.joshuaslik.UFMReckoning.gui.game.CompetitionController" id="pane" styleClass="pane" stylesheets="@Competition.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
 	<children>
+		<!-- Bottom bar -->
+		<fx:include fx:id="bottommenubar" source="GameBottomMenuBar.fxml" />
 		<Pane>
 			<children>
-				<Button id="btn_SeeAllGames" layoutX="90" layoutY="430" mnemonicParsing="false" prefHeight="100" prefWidth="400" styleClass="btn_SeeAllGames" text="Games" onAction="#handleSeeAllGames"/>
-				<Button id="btn_Ranking" layoutX="90" layoutY="530" mnemonicParsing="false" prefHeight="100" prefWidth="400" styleClass="btn_Ranking" text="Ranking" onAction="#handleRanking"/>			
+				<Button id="btn_Games" layoutX="90" layoutY="430" mnemonicParsing="false" prefHeight="100" prefWidth="400" styleClass="btn_Games" text="Games" onAction="#handleGames"/>
+				<Button id="btn_Ranking" layoutX="90" layoutY="530" mnemonicParsing="false" prefHeight="100" prefWidth="400" styleClass="btn_Ranking" text="Ranking" onAction="#handleRanking"/>
 				<Button id="btn_ShowNextGame" layoutX="90" layoutY="630" mnemonicParsing="false" prefHeight="100" prefWidth="400" styleClass="btn_ShowNextGame" text="Next Game" onAction="#handleShowNextGame"/>
 			</children>
 		</Pane>
-		<!-- Bottom bar -->
-		<fx:include fx:id="bottommenubar" source="GameBottomMenuBar.fxml" />
 	</children>
 </Pane>
 
