Added pane to Teambuilder.fxml

--- a/src/main/resources/data/gui/pages-game/TeamBuilder.fxml
+++ b/src/main/resources/data/gui/pages-game/TeamBuilder.fxml
@@ -7,13 +7,9 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
-<Pane fx:controller="nl.joshuaslik.UFMReckoning.gui.game.MainGameController" id="pane" styleClass="pane" stylesheets="@TeamBuilder.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<Pane id="pane" prefHeight="1080.0" prefWidth="1920.0" styleClass="pane" stylesheets="@TeamBuilder.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nl.joshuaslik.UFMReckoning.gui.game.MainGameController">
 	<children>
-		<Pane>
-			<children>
-			</children>
-		</Pane>
+		<Pane layoutX="360.0" layoutY="150.0" prefHeight="800.0" prefWidth="1200.0" style="-fx-background-color: #101010; -fx-border-color: #CECECE; -fx-opacity: 80%; -fx-border-width: 1px;" />
 		<!-- Bottom bar -->
 		<fx:include fx:id="bottommenubar" source="GameBottomMenuBar.fxml" />
 	</children>
