Added dropdown menu in mainmenu and changed added a rootlayout

--- a/src/main/resources/data/gui/pages-menu/MainMenu.css
+++ b/src/main/resources/data/gui/pages-menu/MainMenu.css
@@ -2,7 +2,7 @@
 
 @font-face {
   font-family: 'Quicksand';
-  src: url(fonts/Quicksand.otf);
+  src: url(../fonts/Quicksand.otf);
 }
 
 .pane {
@@ -23,6 +23,8 @@
 	-fx-border-color: #cecece;
 	-fx-border-style: solid;
 }
+
+
 
 .button: hover{
 	-fx-background-color: #000000;
