--- a/src/main/resources/data/gui/pages-menu/MainMenu.fxml
+++ b/src/main/resources/data/gui/pages-menu/MainMenu.fxml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.canvas.*?>
+<?import java.net.*?>
 <?import java.lang.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.AnchorPane?>
 
-
-<Pane fx:controller="nl.joshuaslik.UFMReckoning.gui.ActionController" id="pane" maxHeight="-Infinity" styleClass="pane" stylesheets="@MainMenu.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-	<children>
-		<Button id="btn_StartGame" layoutX="90" layoutY="330" mnemonicParsing="false" prefHeight="100" prefWidth="400" styleClass="btn_StartGame" text="Start game" onAction="#handleStartGame"/>
-		<Button id="btn_Options" layoutX="90" layoutY="430" mnemonicParsing="false" prefHeight="100" prefWidth="400" styleClass="btn_Options" text="Options" onAction="#handleOptions"/>
-		<Button id="btn_Highscore" layoutX="90" layoutY="530" mnemonicParsing="false" prefHeight="100" prefWidth="400" styleClass="btn_Highscore" text="Highscore" onAction="#handleHighscores"/>
-		<Button id="btn_QuitMenu" layoutX="90" layoutY="630" mnemonicParsing="false" prefHeight="100" prefWidth="400" styleClass="btn_QuitMenu" text="Quit game" onAction="#handleQuitMenu"/>
-	</children>
-</Pane>
+<AnchorPane prefHeight="1080.0" prefWidth="1920.0" styleClass="pane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nl.joshuaslik.UFMReckoning.gui.ControllerMainMenu">
+   <children>
+      <Button id="btn_QuitMenu" layoutX="100.0" layoutY="640.0" mnemonicParsing="false" onAction="#handleQuitMenu" prefHeight="100" prefWidth="400" styleClass="btn_QuitMenu" text="Quit game" />
+      <Button id="btn_Highscore" layoutX="100.0" layoutY="540.0" mnemonicParsing="false" onAction="#handleHighscores" prefHeight="100" prefWidth="400" styleClass="btn_Highscore" text="Highscore" />
+      <Button id="btn_Options" layoutX="100.0" layoutY="440.0" mnemonicParsing="false" onAction="#handleOptions" prefHeight="100" prefWidth="400" styleClass="btn_Options" text="Options" />
+      <Button id="btn_StartGame" fx:id="startgame" layoutX="100.0" layoutY="340.0" mnemonicParsing="false" prefHeight="100" prefWidth="400" styleClass="btn_StartGame" text="Start game" />
+      <Button id="btn_LoadGame" fx:id="loadgame" layoutX="500.0" layoutY="440.0" mnemonicParsing="false" prefHeight="100" prefWidth="400" styleClass="btn_StartGame" text="Load Game" visible="false" />
+      <Button id="btn_NewGame" fx:id="newgame" layoutX="500.0" layoutY="340.0" mnemonicParsing="false" onAction="#handleNewGame" prefHeight="100" prefWidth="400" styleClass="btn_StartGame" text="New Game" visible="false" />
+   </children>
+   <stylesheets>
+      <URL value="@MainMenu.css" />
+   </stylesheets>
+</AnchorPane>
