--- a/src/main/resources/data/gui/pages-menu/Topmenu.css
+++ b/src/main/resources/data/gui/pages-menu/Topmenu.css
@@ -2,13 +2,7 @@
 
 @font-face {
   font-family: 'Quicksand';
-  src: url(fonts/Quicksand.otf);
-}
-
-.pane {
-	-fx-background-image: url("../img/background.png");
-	-fx-background-size: 100%;
-	-fx-background-repeat: stretch;
+  src: url(../fonts/Quicksand.otf);
 }
 
 .button {
@@ -16,16 +10,19 @@
 	-fx-margin: 0;
 	-fx-background-color: #101010;
 	-fx-text-fill: white;
-	-fx-font-size: 33;
 	-fx-font-family: 'Quicksand';
 	-fx-opacity: 80%;
 	-fx-border-width: 1px;
 	-fx-border-color: #cecece;
 	-fx-border-style: solid;
+	-fx-font-size: 33;
 }
+
+
 
 .button: hover{
 	-fx-background-color: #000000;
 	-fx-opacity: 90%;
 	-fx-cursor: hand;
+	-fx-font-family: 'Quicksand';
 }
