--- a/src/main/resources/data/gui/pages-game/GameBottomMenuBar.fxml
+++ b/src/main/resources/data/gui/pages-game/GameBottomMenuBar.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane stylesheets="@GameBottomMenuBar.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nl.joshuaslik.UFMReckoning.gui.game.MainGameController">
+<AnchorPane style="-fx-background-color: black;" stylesheets="@GameBottomMenuBar.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nl.joshuaslik.UFMReckoning.gui.game.MainGameController">
    <children>
       <Button layoutX="591.0" onAction="#handleQuitGame" prefHeight="60" prefWidth="200" styleClass="bottombarbutton" text="Quit" />
       <Button layoutX="391.0" prefHeight="60" prefWidth="200" styleClass="bottombarbutton" text="Save" />
