--- a/src/main/resources/data/gui/pages-game/Competition.fxml
+++ b/src/main/resources/data/gui/pages-game/Competition.fxml
@@ -5,11 +5,9 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="692.0" prefWidth="1232.0" styleClass="pane" stylesheets="@Competition.css" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="nl.joshuaslik.UFMReckoning.gui.game.CompetitionController">
+<AnchorPane prefHeight="692.0" prefWidth="1232.0" styleClass="pane" stylesheets="@Competition.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nl.joshuaslik.UFMReckoning.gui.game.CompetitionController">
    <children>
-      <Button id="btn_ShowNextGame" layoutX="79.0" layoutY="369.0" mnemonicParsing="false" onAction="#handleShowNextGame" prefHeight="100" prefWidth="400" styleClass="btn_ShowNextGame" text="Next Game" />
       <Button id="btn_Ranking" layoutX="79.0" layoutY="269.0" mnemonicParsing="false" onAction="#handleRanking" prefHeight="100" prefWidth="400" styleClass="btn_Ranking" text="Ranking" />
-      <Button id="btn_Games" layoutX="79.0" layoutY="169.0" mnemonicParsing="false" onAction="#handleGames" prefHeight="100.0" prefWidth="400.0" styleClass="btn_Games" text="Games" />
+      <Button id="btn_Games" layoutX="79.0" layoutY="169.0" mnemonicParsing="false" onAction="#handlePlayrounds" prefHeight="100.0" prefWidth="400.0" styleClass="btn_Games" text="Playrounds" />
    </children>
 </AnchorPane>
