--- a/src/main/resources/data/gui/pages-game/GameBottomMenuBar.fxml
+++ b/src/main/resources/data/gui/pages-game/GameBottomMenuBar.fxml
@@ -1,16 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import java.net.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane style="-fx-background-color: black;" stylesheets="@GameBottomMenuBar.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nl.joshuaslik.UFMReckoning.gui.game.MainGameController">
+<AnchorPane prefHeight="60.0" prefWidth="1098.0" style="-fx-background-color: black;" stylesheets="@GameBottomMenuBar.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nl.joshuaslik.UFMReckoning.gui.game.MainGameController">
    <children>
-      <Button layoutX="591.0" onAction="#handleQuitGame" prefHeight="60" prefWidth="200" styleClass="bottombarbutton" text="Quit" />
+      <Button layoutX="591.0" onAction="#handleQuitGame" prefHeight="60" prefWidth="231.0" styleClass="bottombarbutton" text="Quit" />
       <Button layoutX="391.0" prefHeight="60" prefWidth="200" styleClass="bottombarbutton" text="Save" />
       <Button layoutX="191.0" onAction="#handleCompetition" prefHeight="60" prefWidth="200" styleClass="bottombarbutton" text="Competition" />
       <Button layoutX="-9.0" onAction="#handleTeamBuilder" prefHeight="60" prefWidth="200" styleClass="bottombarbutton" text="Team" />
+      <Label fx:id="budgetlabel" layoutX="862.0" layoutY="12.0" prefHeight="36.0" prefWidth="224.0" textFill="#fffefe">
+         <font>
+            <Font size="25.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
