tried something for resized screen

--- a/src/main/resources/data/gui/pages-menu/MainMenu.css
+++ b/src/main/resources/data/gui/pages-menu/MainMenu.css
@@ -14,9 +14,10 @@
 .button {
 	-fx-padding: 0;
 	-fx-margin: 0;
+
 	-fx-background-color: #101010;
 	-fx-text-fill: white;
-	-fx-font-size: 60;
+	-fx-font-size: 350%;
 	-fx-font-family: 'Quicksand';
 	-fx-opacity: 80%;
 	-fx-border-width: 1px;
