--- a/src/main/resources/data/gui/pages-menu/MainMenu.fxml
+++ b/src/main/resources/data/gui/pages-menu/MainMenu.fxml
@@ -1,19 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import java.net.*?>
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="1080.0" prefWidth="1920.0" styleClass="pane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nl.joshuaslik.UFMReckoning.gui.ControllerMainMenu">
+<AnchorPane prefHeight="183.0" prefWidth="829.0" styleClass="pane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nl.joshuaslik.UFMReckoning.gui.ControllerMainMenu">
    <children>
-      <Button id="btn_QuitMenu" layoutX="100.0" layoutY="640.0" mnemonicParsing="false" onAction="#handleQuitMenu" prefHeight="100" prefWidth="400" styleClass="btn_QuitMenu" text="Quit game" />
-      <Button id="btn_Highscore" layoutX="100.0" layoutY="540.0" mnemonicParsing="false" onAction="#handleHighscores" prefHeight="100" prefWidth="400" styleClass="btn_Highscore" text="Highscore" />
-      <Button id="btn_Options" layoutX="100.0" layoutY="440.0" mnemonicParsing="false" onAction="#handleOptions" prefHeight="100" prefWidth="400" styleClass="btn_Options" text="Options" />
-      <Button id="btn_StartGame" fx:id="startgame" layoutX="100.0" layoutY="340.0" mnemonicParsing="false" prefHeight="100" prefWidth="400" styleClass="btn_StartGame" text="Start game" />
-      <Button id="btn_LoadGame" fx:id="loadgame" layoutX="500.0" layoutY="440.0" mnemonicParsing="false" prefHeight="100" prefWidth="400" styleClass="btn_StartGame" text="Load Game" visible="false" />
-      <Button id="btn_NewGame" fx:id="newgame" layoutX="500.0" layoutY="340.0" mnemonicParsing="false" onAction="#handleNewGame" prefHeight="100" prefWidth="400" styleClass="btn_StartGame" text="New Game" visible="false" />
+      <HBox AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="300.0">
+         <children>
+            <VBox>
+               <children>
+                  <Button id="btn_StartGame" fx:id="startgame" maxWidth="1.7976931348623157E308" mnemonicParsing="false" styleClass="btn_StartGame" text="Start game" />
+                  <Button id="btn_Options" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleOptions" styleClass="btn_Options" text="Options" />
+                  <Button id="btn_Highscore" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleHighscores" styleClass="btn_Highscore" text="Highscore" />
+                  <Button id="btn_QuitMenu" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleQuitMenu" styleClass="btn_QuitMenu" text="Quit game" />
+               </children>
+            </VBox>
+            <VBox>
+               <children>
+                  <Button id="btn_NewGame" fx:id="newgame" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleNewGame" styleClass="btn_StartGame" text="New Game" visible="false" />
+                  <Button id="btn_LoadGame" fx:id="loadgame" maxWidth="1.7976931348623157E308" mnemonicParsing="false" styleClass="btn_StartGame" text="Load Game" visible="false" />
+               </children>
+            </VBox>
+         </children>
+      </HBox>
    </children>
    <stylesheets>
       <URL value="@MainMenu.css" />
