--- a/src/main/resources/data/gui/pages-menu/NewGame.css
+++ b/src/main/resources/data/gui/pages-menu/NewGame.css
@@ -11,7 +11,7 @@
 	-fx-margin: 0;
 	-fx-background-color: #101010;
 	-fx-text-fill: white;
-	-fx-font-size: 33;
+	-fx-font-size: 250%;
 	-fx-font-family: 'Quicksand';
 	-fx-opacity: 80%;
 	-fx-border-width: 1px;
