--- a/src/main/resources/data/gui/pages-menu/NewGame.fxml
+++ b/src/main/resources/data/gui/pages-menu/NewGame.fxml
@@ -1,29 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
+<?import javafx.geometry.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="966.0" prefWidth="1923.0" styleClass="pane" stylesheets="@NewGame.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nl.joshuaslik.UFMReckoning.gui.NewGameController">
+<AnchorPane styleClass="pane" stylesheets="@NewGame.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nl.joshuaslik.UFMReckoning.gui.NewGameController">
    <children>
-      <TableView fx:id="teamtable" layoutX="157.0" opacity="0.86" prefHeight="862.0" prefWidth="1565.0">
+      <TableView fx:id="teamtable" opacity="0.63" prefHeight="396.0" prefWidth="562.0" AnchorPane.bottomAnchor="45.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <columns>
-          <TableColumn fx:id="teamColumn" prefWidth="187.0" text="Team" />
-          <TableColumn fx:id="coachColumn" prefWidth="194.0" text="Coach" />
-            <TableColumn fx:id="averageattack" minWidth="0.0" prefWidth="207.0" text="Average Attack" />
-            <TableColumn fx:id="averagedefence" prefWidth="231.0" text="Average Defence" />
-            <TableColumn fx:id="averagestamina" minWidth="0.0" prefWidth="265.0" text="Average Stamina" />
-            <TableColumn minWidth="0.0" prefWidth="183.0" text="Total Players" />
-            <TableColumn minWidth="0.0" prefWidth="245.0" text="Team value" />
+          <TableColumn fx:id="teamColumn" text="Team" />
+          <TableColumn fx:id="coachColumn" text="Coach" />
+            <TableColumn fx:id="averageattack" minWidth="0.0" text="Average Attack" />
+            <TableColumn fx:id="averagedefence" text="Average Defence" />
+            <TableColumn fx:id="averagestamina" minWidth="0.0" text="Average Stamina" />
+            <TableColumn minWidth="0.0" text="Total Players" />
+            <TableColumn minWidth="0.0" text="Team value" />
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
-      <HBox layoutX="1563.0" layoutY="908.0" prefHeight="51.0" prefWidth="302.0">
+      <HBox AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <children>
-            <Button mnemonicParsing="false" onAction="#handleChooseTeam" prefHeight="51.0" prefWidth="260.0" text="Choose this team" />
-         </children>
-      </HBox>
+            <Button mnemonicParsing="false" onAction="#handleChooseTeam" text="Choose this team">
+            </Button>
+         </children></HBox>
    </children>
 </AnchorPane>
